# Shark-Plugins

./: README.md  build.sh  site.yml
backtest/defaults/: main.yml
backtest/files/: backtest.cfg  backtest.py
backtest/handlers/: main.yml
backtest/tasks/: dependencies.yml  main.yml
backtest/tests/: test.yml
backtest/vars/: main.yml
correlation/files/: correlation.cfg  correlation.py
correlation/tasks/: dependencies.yml
correlation/vars/: main.yml
ema/defaults/: main.yml
ema/files/: ema.cfg  ema.py
ema/handlers/: main.yml
ema/tasks/: main.yml
ema/tests/: test.yml
ema/vars/: main.yml
portfolio/files/: portfolio.cfg  portfolio_correlation.py  portfolio_covariance.py
portfolio/tasks/: dependencies.yml  main.yml
portfolio/vars/: main.yml
rsi/defaults/: main.yml
rsi/files/: rsi.cfg  rsi.py
rsi/handlers/: main.yml
rsi/tasks/: main.yml
rsi/tests/: test.yml
rsi/vars/: main.yml
shark-plugins/: check_data.py  pyproject.toml  setup.cfg
shark-plugins/defaults/: main.yml
shark-plugins/files/: .gitignore  check_data.py
shark-plugins/handlers/: main.yml
shark-plugins/src/plugins/: check_email_for_asx_notifications.py  check_gmail_for_asx_notifications.py  yahoo_finance_data.py
shark-plugins/tasks/: main.yml
shark-plugins/tests/: test.yml
shark-plugins/vars/: main.yml
sma/defaults/: main.yml
sma/files/: check_sma.cfg  sma.cfg  sma.py
sma/handlers/: main.yml
sma/tasks/: dependencies.yml  main.yml
sma/tests/: test.yml
sma/vars/: main.yml
strategy/defaults/: main.yml
strategy/handlers/: main.yml
(+17 files in other folders)
