[metadata]
name = shark-plugins-DANIELNEIL
version = 0.0.1
author = Daniel Neil
author_email = danielneilhodder@gmail.com
description = Plugins for the Shark automated trading platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danielneil/Shark-Plugins
project_urls =
    Bug Tracker = https://github.com/danielneil/Shark-Plugins
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
